--- a/.gitignore
+++ b/.gitignore
@@ -13,6 +13,7 @@ pickle-email-*.html
 config/initializers/secret_token.rb
 config/secrets.yml
 config/initializers/superuser_credentials.rb
+config/initializers/superuser_credentials.example.rb
 
 ## Environment normalisation:
 /.bundle
