--- a/.gitignore
+++ b/.gitignore
@@ -14,6 +14,7 @@ config/initializers/secret_token.rb
 config/secrets.yml
 config/initializers/superuser_credentials.rb
 config/initializers/superuser_credentials.example.rb
+config/database.yml
 
 ## Environment normalisation:
 /.bundle
